[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "insights-sha-extractor"
dynamic = ["version"]
readme = "README.md"
authors = [
    {name="CCX Processing Team", email="ccx-core-processing-team@redhat.com"}
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

requires-python = ">= 3.8"
dependencies = [
    "app-common-python>=0.2.5",
    "ccx-messaging>=3.8.3",
    "insights-core-messaging>=1.2.10"
]

[tool.setuptools.packages.find]
include = ["insights_sha_extractor"]

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/RedHatInsights/insights-sha-extractor/"

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "freezegun",
    "pycco",
    "pycodestyle",
    "pylint",
    "pytest",
    "pytest-cov"
]

[tool.setuptools_scm]
