[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_author = "vmaas-bot <40663028+vmaas-bot@users.noreply.github.com>"
allow_zero_version = false

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["build", "chore", "ci", "fix", "perf", "refactor"]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "insights-sha-extractor"
version = "1.0.57"
readme = "README.md"
authors = [
    {name="CCX Processing Team", email="ccx-core-processing-team@redhat.com"}
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

requires-python = ">= 3.8"
dependencies = [
    "app-common-python>=0.2.5",
    "ccx-messaging>=4.3.2",
    "insights-core-messaging>=1.2.20"
]

[tool.setuptools.packages.find]
include = ["insights_sha_extractor"]

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/RedHatInsights/insights-sha-extractor/"

[project.optional-dependencies]
dev = [
    "black",
    "coverage",
    "freezegun",
    "pycco",
    "pycodestyle",
    "pylint",
    "pytest",
    "pytest-cov"
]

[tool.setuptools_scm]
