[metadata]
name = insights-sha-extractor
author = Red Hat Inc.
description-file = README.md
license = Apache 2.0
long_description_content_type = text/markdown
home-page = https://gitlab.cee.redhat.com/ccx/ccx-sha-extractor
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
install_requires =
    app-common-python
    boto3
    ccx-messaging>=3.3.0
    insights-core-messaging
    python-json-logger
    sentry-sdk
    watchtower
setup_requires =
    setuptools
    setuptools_scm
    wheel

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    insights-sha-extractor = insights_sha_extractor.command_line:insights_sha_extractor

[options.extras_require]
dev =
    black
    coverage
    freezegun
    pycco
    pycodestyle
    pydocstyle
    pylint
    pytest
    pytest-cov

[pycodestyle]
ignore = E402
max-line-length = 100
exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist,
    tests/,
    samples/,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    docs,
    .venv,
    venv,

[flake8]
max-line-length = 100
